# samux

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  user_disk.img
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/src/: allocator.rs  demo.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  panic.rs  shell.rs  syscall.rs  syscall_asm.asm
kernel/src/drivers/: ata.rs
kernel/src/fs/: fat.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/: main.rs
