[package]
name = "samux"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["kernel"]

[dependencies]
ovmf-prebuilt = "0.2.4"

[build-dependencies]
bootloader = "0.11.13"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
