[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.13"
uart_16550 = "0.4.0"
x86_64 = "0.15.4"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"

[features]
default = []

